force-app/main/default/objects/Property__c/fields/Lease_Agreement_Count__c.field-meta.xml
<CustomField>
    <fullName>Lease_Agreement_Count__c</fullName>
    <label>Lease  Agreement Count</label>
    <summaryForeignKey>Lease_Agreement__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>