force-app/main/default/objects/Property__c/validationRules/Image_is_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Image_is_null</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNULL(Image__c ),ISBLANK(Image__c))</errorConditionFormula>
    <errorMessage>Image field should not be blank</errorMessage>
</ValidationRule>